fix(repo-backend): setup in_memory database

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=intern;Password=intern;Server=localhost;Port=5432;Database=backend_test;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "Data Source=LocalDatabase.db"
   }
 }
